From Exercise 2 to 3

--- a/webpage/buyagrade.html
+++ b/webpage/buyagrade.html
@@ -15,7 +15,7 @@
 		<hr />
 		
 		<h2>Give Us Your Money</h2>
-		 <form action ="http://webster.cs.Washington.edu/params.php" method="set">
+		 <form action ="sucker.php" method="post">
 
           Name:<br>
           <input type="text" name="firstname">
@@ -35,7 +35,6 @@
              <input type="submit" value="I am a giant sucker.">
             </div>
 		 </form>
-		
-		
+
 	</body>
 </html>
